# DRF_project

./: .gitignore  Dockerfile  README.md  data.json  data_school.json  data_user.json  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
school/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
school/migrations/: 0001_initial.py  0002_lesson_course_payments.py  0003_alter_payments_amount.py  0004_alter_payments_options_alter_payments_amount.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_payments_is_paid_payments_session_id.py  0008_payments_currency.py  0009_alter_payments_session_id.py  0010_course_new_description.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_alter_user_is_active_alter_user_last_login.py
